--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine AS build
+FROM node:lts-alpine AS install
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci
@@ -7,14 +7,14 @@ COPY test ./test
 COPY config ./config
 COPY .babelrc ./
 
-FROM build AS dev
+FROM install AS dev
 COPY nodemon.json ./
 CMD ["npm", "run", "dev"]
 
 # Run unit tests with code coverage before building release image:
-FROM build AS test
+FROM install AS test
 CMD ["npm", "test"]
 
-FROM build AS release
+FROM install AS release
 COPY src/app.swagger.yaml ./src/app.swagger.yaml
 CMD ["npm", "start"]
