--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "main": "./src/app.js",
   "dependencies": {
+    "config": "^3.1.0",
     "express": "^4.12.3",
     "mongoose": "^5.6.2",
     "swagger-express-mw": "^0.7.0"
@@ -25,10 +26,19 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.5.1",
+    "babel-eslint": "^10.0.2",
+    "babel-preset-airbnb": "^4.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0",
     "rimraf": "^2.6.3"
   },
   "scripts": {
@@ -38,6 +48,8 @@
     "serve": "node build/src/app.js",
     "start": "npm run build && npm run serve",
     "test": "NODE_ENV=test mocha --require @babel/register,@babel/polyfill --exit 'test/**/*.js'",
-    "editor": "swagger project edit"
+    "editor": "swagger project edit",
+    "lint": "eslint --fix src test",
+    "format": "prettier-eslint '{src,test}/**/*.{js,json}' --write"
   }
 }
